Update Act 14 Emojis.html

--- a/Act 14 Emojis.html
+++ b/Act 14 Emojis.html
@@ -53,7 +53,10 @@
 		</div>
 		<div class="emoji-container">
 			<div class="what-is">
-				
+				<h1>What is Emoji?</h1>
+				<p>
+					Emoji are small images, symbols, or icons used in electronic communication. They are embedded in text and used to express objects, ideas, and emotions. Emoji are created using a drawing tool and are incorporated into a unique 16-bit Unicode to make them compatible with different devices and platforms. Emoji can include faces, people, animals, food, places, and more.
+				</p>
 			</div>
 		</div>
 	</body>
